Created a functional course list add/delete using sqlite3 database server and added info in about

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="eng">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -10,13 +10,13 @@
 
 <body>
     <header>
-<p id="headertext">Moment 1 Backend</p>
 
-        <div class="menu">
+
+        <div class="menu"><p id="headertext">Moment 1 Backend</p>
             <nav>
                 <ul>
-                    <li><a href="/">Courses</a></li>
-                    <li><a  class="current"href="about">About</a></li>
+                    <li><a href="/">Your courses</a></li>
+                    <li><a  class="current" href="about">About</a></li>
                     <li><a href="addcourses">Add courses</a></li>
 
                 </ul>
@@ -27,17 +27,12 @@
         <article>
             <h1>Backend-development, mid sweden university</h1>
             <h2>Rosali Johansson</h2>
-            <p>This website shows your university courses. You can add your own courses on "add courses".</p>
+            <p id="about">This website was created as a part of the course Backend-development at Mid Sweden University. The purpose is to create a list of your university courses, store them in a database and also being able to delete each course and add new ones. On this website I have used the database-server "sqlite3", with the help of the npm-packages ejs, express, nodemon and bodyparser. My reflection of the assigment is that it was alot of syntax to learn but I think it's something you will learn and remember over time and it's fascinating once you make it work.</p>
         </article>
-       <h2>Your courses:</h2>
-       <form action="get"><label for=""></label>
-        <input type="text">
-
-       </form>
     </main>
     <!--footer-->
     <footer>
-        <p>Laborationsuppgift för kursen Frontend-baserad utveckling
+        <p>Laborationsuppgift för kursen Backend-baserad utveckling
         </p>
         <p>Mittuniversitetet</p>
         <p>Copyright © 2025 Rosali Johansson</p>
