--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,14 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     max-width: 2000px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: "manrope", sans-serif;
 }
 
 body {
-    background-color: rgb(242, 242, 204);
+    background-color: rgb(240, 231, 221);
     color: rgb(34, 35, 58)
 }
+
 
 #headertext {
     font-size: 2em;
@@ -21,8 +24,14 @@ main {
     margin: auto;
     background-color: rgb(25, 111, 116);
     width: 70%;
-    padding: 5em;
+    padding: 1em;
+    padding-bottom: 2em;
     text-align: center;
+}
+
+#about {
+    width: 70%;
+    padding: 2em;
 }
 
 .current {
@@ -34,11 +43,12 @@ main p {
 }
 
 footer {
-
+    text-align: center;
     position: relative;
     padding-top: 2em;
     left: 0;
     bottom: 0;
+    margin: auto;
 }
 
 li {
@@ -59,11 +69,13 @@ a:hover {
     color: black;
 }
 
+
 nav,
 #headertext {
     display: flex;
     justify-content: center;
     padding: 2em;
+    color: white;
 
 }
 
@@ -82,34 +94,53 @@ ul {
 form {
     display: flex;
     flex-direction: column;
+    width: max-content;
+    margin: auto;
+
+}
+
+#progression {
+    margin-bottom: 2em;
 }
 
 label {
+    text-align: left;
     margin-top: 2em;
-    font-weight: 500S;
+    font-weight: 500;
+    padding-bottom: 0.4em;
 }
 
 input {
-    width: 13em;
+    padding: 1em;
+    width: 90%;
     margin: auto;
 }
 
 #submit {
-    margin-top: 2em;
-    background-color: rgb(242, 242, 204);
-    color: black;
+    background-color: rgb(252, 247, 183);
     font-size: 1em;
     border-radius: 10px;
     border-color: black;
     border-style: solid;
-    padding: 1.5em;
+    padding: 1em;
+    width: 90%;
+    margin: auto;
+}
+
+.menu {
+    background-color: rgb(25, 111, 116);
+  
+}
+
+button a {
+    color: black;
 }
 
 #submit:hover {
     background-color: white;
 }
 
-article p {
+.section p {
     padding: 0;
     margin: auto;
 }
@@ -120,7 +151,18 @@ h2 {
 }
 
 main {
+    margin-top: 3em;
     text-align: center;
+}
+
+.deletebutton {
+    border-radius: 10px;
+    padding: 1em;
+    background-color: rgb(255, 255, 255);
+}
+
+.deletebutton:hover {
+    text-decoration: underline;
 }
 
 .courses {
@@ -128,11 +170,52 @@ main {
     display: block;
     padding: 1em;
     text-align: left;
-    width: 15em;
+    width: 70%;
     font-weight: 500;
-    margin-top: 1em;
+    margin-top: 2em;
 }
 
 .courses li {
     padding: 0.3em;
+}
+
+#error,
+#saved {
+    padding: 2em;
+    color: rgb(255, 223, 118);
+    font-weight: 600;
+
+}
+article p{
+    margin: auto;
+}
+.section {
+    margin-bottom: 2em;
+}
+.section a {
+    padding: 0;
+    font-size: 15px;
+}
+
+@media all and (max-width: 900px) {
+    li a {
+        font-size: 12px;
+    }
+
+    #error,
+    #saved {
+        margin: auto;
+        padding: 2em;
+        color: rgb(255, 223, 118);
+        font-weight: 600;
+        width: 50%;
+    }
+
+    form {
+        width: 70%;
+    }
+
+    nav ul {
+        width: 100%;
+    }
 }
