--- a/views/showcourses.ejs
+++ b/views/showcourses.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="eng">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -11,12 +11,13 @@
 
 <body>
     <header>
-        <p id="headertext">Moment 1 Backend</p>
+
 
         <div class="menu">
+            <p id="headertext">Moment 1 Backend</p>
             <nav>
                 <ul>
-                    <li><a class="current" href="/">Courses</a></li>
+                    <li><a class="current" href="/">Your courses</a></li>
                     <li><a href="about">About</a></li>
                     <li><a href="addcourses">Add courses</a></li>
 
@@ -27,40 +28,41 @@
     <main>
         <article>
             <h1>Backend-development, mid sweden university</h1>
-            <h2>Rosali Johansson</h2>
             <p>This website shows your university courses. You can add your own courses on "add courses".</p>
         </article>
-        <h2>Your courses:</h2>
-
-        <% if (courseList.length> 0) { %>
-            <% courseList.forEach((course)=> { %>
-                <article>
+     
+<h2>Your courses:</h2>
+        <% if (locals.rows.length> 0) { %>
+            <% locals.rows.forEach((course)=> { %>
+                <div class="section">
                     <ul class="courses">
+ 
                         <li>
-                            Coursename: <%= course.name %>
-                        </li><br>
+                            Coursename: <%= course.coursename %>
+                        </li>
                         <li>
                             Coursecode: <%= course.coursecode %>
-                        </li> <br>
+                        </li> 
                         <li>
-                            Syllabus: <%= course.syllabus %>
-                        </li><br>
+                            Syllabus: <a href="<%= course.syllabus %>"><%= course.syllabus %></a>
+                        </li>
                         <li>
                             Progression: <%= course.progression %>
                         </li>
+
                     </ul>
-                </article>
+                   <a class="deletebutton" href="/delete/<%= course.id %>">Delete course</a>
+                </div>
                 <% }); %>
                     <% } else { %>
                         <p>No courses saved yet..</p>
                         <% } %>
 
 
-                            </form>
     </main>
     <!--footer-->
     <footer>
-        <p>Laborationsuppgift för kursen Frontend-baserad utveckling
+        <p>Laborationsuppgift för kursen Backend-baserad utveckling
         </p>
         <p>Mittuniversitetet</p>
         <p>Copyright © 2025 Rosali Johansson</p>
