changed name on showcourses.ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,7 @@
             <p id="headertext">Moment 1 Backend</p>
             <nav>
                 <ul>
-                    <li><a class="current" href="/">Your courses</a></li>
+                    <li><a class="current" href="index">Your courses</a></li>
                     <li><a href="about">About</a></li>
                     <li><a href="addcourses">Add courses</a></li>
 
