--- a/views/addcourses.ejs
+++ b/views/addcourses.ejs
@@ -16,7 +16,7 @@
         <div class="menu">    <p id="headertext">Moment 1 Backend</p>
             <nav>
                 <ul>
-                    <li><a href="/">Your courses</a></li>
+                    <li><a href="index">Your courses</a></li>
                     <li><a href="about">About</a></li>
                     <li><a class="current" href="addcourses">Add courses</a></li>
 
