corrected css, corrected name index

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -170,13 +170,22 @@ main {
     display: block;
     padding: 1em;
     text-align: left;
-    width: 70%;
+    width: 90%;
     font-weight: 500;
     margin-top: 2em;
 }
 
 .courses li {
-    padding: 0.3em;
+   
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+}
+
+.courses li a {
+    display: flex;
+  padding:0;
+
 }
 
 #error,
@@ -191,9 +200,11 @@ article p{
 }
 .section {
     margin-bottom: 2em;
+    width: 100%;
+
 }
 .section a {
-    padding: 0;
+padding:1em;
     font-size: 15px;
 }
 
@@ -214,8 +225,18 @@ article p{
     form {
         width: 70%;
     }
+    
+.courses li a {
+    display: flex;
+  padding:0em;
+  font-size: 10px;
+}
 
     nav ul {
+        width: 100%;
+    }
+
+     {
         width: 100%;
     }
 }
