--- a/views/about.ejs
+++ b/views/about.ejs
@@ -15,7 +15,7 @@
         <div class="menu"><p id="headertext">Moment 1 Backend</p>
             <nav>
                 <ul>
-                    <li><a href="index">Your courses</a></li>
+                    <li><a href="/">Your courses</a></li>
                     <li><a  class="current" href="about">About</a></li>
                     <li><a href="addcourses">Add courses</a></li>
 
