changed font size on #headertext in @media

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -213,7 +213,9 @@ article p{
     li a {
         font-size: 12px;
     }
-
+#headertext {
+    font-size: 24px;
+}
     #error,
     #saved {
         margin: auto;
