--- a/views/about.ejs
+++ b/views/about.ejs
@@ -27,7 +27,7 @@
         <article>
             <h1>Backend-development, mid sweden university</h1>
             <h2>Rosali Johansson</h2>
-            <p id="about">This website was created as a part of the course Backend-development at Mid Sweden University. The purpose is to create a list of your university courses, store them in a database and also being able to delete each course and add new ones. On this website I have used the database-server "sqlite3", with the help of the npm-packages ejs, express, nodemon and bodyparser. My reflection of the assigment is that it was alot of syntax to learn but I think it's something you will learn and remember over time and it's fascinating once you make it work.</p>
+            <p id="about">This website was created as a part of the course Backend-development at Mid Sweden University. The purpose is to create a list of your university courses, store them in/create a database and also to be able to delete each course and add new ones in the database. On this website I have used the database-server "sqlite3", with the help of the npm-packages ejs, express, nodemon and bodyparser, when the website was finished, it was deployed using Render. My reflection of the assigment is that it was alot of syntax to learn but I think it's something you will learn and remember over time and it's fascinating once you make it work.</p>
         </article>
     </main>
     <!--footer-->
